--- a/taskfiles/Taskfile-image.yml
+++ b/taskfiles/Taskfile-image.yml
@@ -1,8 +1,9 @@
 ---
-version: '3'
+version: "3"
 
 vars:
-  IGNORE_FOLDERS: -name .autodoc -o -name .cache -o -name .common -o -name .git -o -name .husky
+  IGNORE_FOLDERS:
+    -name .autodoc -o -name .cache -o -name .common -o -name .git -o -name .husky
     -o -name .modules -o -name .npm -o -name .task -o -name .venv -o -name .vscode -o -name node_modules
     -o -name venv
   TINYPNG_API_KEY: z4qhFBLRvNMG9rHmdkSLx1DR1FNZN5gc
@@ -10,8 +11,8 @@ vars:
 tasks:
   compress:
     deps:
-      - :npm:tinypng
-      - :software:exiftool
+      - :install:npm:tinypng
+      - :install:software:exiftool
     desc: Compress JPG/PNG images via TinyPNG
     summary: |
       # Compress JPG/PNG images via TinyPNG
@@ -42,27 +43,27 @@ tasks:
               if [ -f ~/.tinypng ]; then
                 tinypng "$1"
               else
-                tinypng -k "\{{.TINYPNG_API_KEY}}" "$1"
+                tinypng -k "{{.TINYPNG_API_KEY}}" "$1"
               fi
               exiftool -comment="tinypng-compressed" "$1"
             fi
           else
-            true error "Failed to extract EXIF data from '$1' so the compression is being skipped"
+            true error "Failed to extract EXIF data from `$1` so the compression is being skipped"
           fi
         }
-        if [ -z "\{{.CLI_ARGS}}" ]; then
-          find . -type d \( \{{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.jpg' -o -name '*.png' \) -print0 |
+        if [ -z '{{.CLI_ARGS}}' ]; then
+          find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.jpg' -o -name '*.png' \) -print0 |
             xargs -0 -r -n1 compressImage
         else
-          compressImage "\{{.CLI_ARGS}}"
+          compressImage '{{.CLI_ARGS}}'
         fi
     sources:
       - "**/*.(jpg|png)"
 
   resize:
     deps:
-      - :npm:sharp
-      - :software:exiftool
+      - :install:npm:sharp
+      - :install:software:exiftool
     desc: Resize an image
     summary: |
       # Resize images
@@ -78,13 +79,16 @@ tasks:
       **Example changing the width to 200px and height to 240px of an image named `image.png`:**
       `task image:resize -- 200 240 image.png`
     cmds:
-      - |
-        if [ -z "\{{.CLI_ARGS}}" ]; then
-          true info "Interactive dialog coming eventually.."
-        else
-          ARGS_ARRAY=(\{{.CLI_ARGS}})
-          if ! exiftool "${ARGS_ARRAY[2]}" | grep 'Image Size' | grep "${ARGS_ARRAY[0]}x${ARGS_ARRAY[1]}"; then
-            sharp -i "${ARGS_ARRAY[2]}" -o "${ARGS_ARRAY[2]}.resized" resize "${ARGS_ARRAY[0]}" "${ARGS_ARRAY[1]}"
-            mv "${ARGS_ARRAY[2]}.resized" "${ARGS_ARRAY[2]}"
-          fi
-        fi
+      - task: resize:{{if .CLI_ARGS}}cli{{else}}default{{end}}
+
+  resize:cli: true info "Interactive dialog coming eventually.."
+
+  resize:default:
+    env:
+      ARGS_ARRAY:
+        sh: ({{.CLI_ARGS}})
+    cmds:
+      - sharp -i "${ARGS_ARRAY[3]}" -o "${ARGS_ARRAY[3]}.resized" resize "${ARGS_ARRAY[1]}" "${ARGS_ARRAY[2]}"
+      - mv "${ARGS_ARRAY[3]}.resized" "${ARGS_ARRAY[3]}"
+    status:
+      - 'exiftool "${ARGS_ARRAY[3]}" | grep "Image Size" | grep "${ARGS_ARRAY[1]}x${ARGS_ARRAY[2]}'
