--- a/taskfiles/Taskfile-lint.yml
+++ b/taskfiles/Taskfile-lint.yml
@@ -1,43 +1,28 @@
 ---
-version: '3'
+version: "3"
 
 vars:
-  IGNORE_FOLDERS: -name .autodoc -o -name .cache -o -name .common -o -name .git -o -name .husky
+  CSPELL_CONFIG: .common/.cspell.json
+  IGNORE_FOLDERS:
+    -name .autodoc -o -name .cache -o -name .common -o -name .git -o -name .husky
     -o -name .modules -o -name .npm -o -name .task -o -name .venv -o -name .vscode -o -name node_modules
     -o -name venv
 
 tasks:
   all:
-    desc: Lint the project by running all the linters in parallel
     deps:
-      - formatting
-{{#if hbs.ansible}}
-      - ansible
-{{/if}}
-{{#if hbs.dockerfile}}
-      - docker
-{{/if}}
+      - "{{.REPOSITORY_TYPE}}"
+      - prettier
       - markdown
-{{#if hbs.packer}}
-      - packer
-{{/if}}
-      - private-keys
-{{#if hbs.python}}
-      - python
-{{/if}}
-      - scripts
-{{#if hbs.vagrant}}
-      - vagrant
-{{/if}}
-{{#if hbs.yaml}}
+      - prose
+      - shellcheck
       - yaml
-{{/if}}
+    desc: Lint with all available linters
 
-{{#if hbs.ansible}}
   ansible:
     deps:
       - :ansible:symlink
-      - :common:python-requirements
+      - :common:python:requirements
     desc: Lint Ansible projects using Ansible Lint
     summary: |
       # Lint an Ansible project using Ansible Lint
@@ -53,28 +38,19 @@ tasks:
       For more information, see [Ansible Lint's GitHub page](https://github.com/ansible-community/ansible-lint).
     cmds:
       - ansible-lint
-    sources:
-      - "**/*.yml"
 
-{{/if}}
   commit:
     deps:
-      - :common:nodejs-dependencies
-      - :npm:commitlint
+      - :common:node:dependencies:local
+      - :install:npm:commitlint
     cmds:
-      - |
-        if [ ! -z "\{{.CLI_ARGS}}" ]; then
-          commitlint -e "\{{.CLI_ARGS}}" --config .common/commitlint.config.cjs
-        else
-          true warn "The 'lint:commit' task requires a COMMIT_EDITMSG file path passed in as a CLI argument."
-        fi
+      - if [ ! -z '{{.CLI_ARGS}}' ]; then commitlint -e '{{.CLI_ARGS}}' --config .common/commitlint.config.cjs; fi
     status:
-      - '[[ -z "\{{.CLI_ARGS}}" ]]'
+      - '[[ -z "{{.CLI_ARGS}}" ]]'
 
-{{#if hbs.dockerfile}}
   docker:
     deps:
-      - :software:docker
+      - :install:software:docker
     desc: Lint Dockerfiles using Hadolint (requires Docker)
     summary: |
       # Lint Dockerfiles using Hadolint
@@ -104,77 +80,27 @@ tasks:
 
       For more information, see [Hadolint's GitHub page](https://github.com/hadolint/hadolint).
     cmds:
-      - |
-        if [ -z "\{{.CLI_ARGS}}" ]; then
-          find . -type d \( \{{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name Dockerfile -o
-            -name Dockerfile.j2 \) -print0 | xargs -0 -r -n1 docker run -v "$PWD:/work" -w /work
-            megabytelabs/hadolint:slim
-        else
-          docker run -v "$PWD:/work" -w /work megabytelabs/hadolint:slim \{{.CLI_ARGS}}
-        fi
-    sources:
-      - "**/(Dockerfile|Dockerfile.j2)"
+      - task: docker:{{if .CLI_ARGS}}cli{{else}}default{{end}}
 
-{{/if}}
-  formatting:
-    deps:
-      - :npm:prettier
-    desc: Lint formatting using Prettier
-    summary: |
-      # Report formatting errors with Prettier
+  docker:cli: docker run -v "$PWD:/work" -w /work megabytelabs/hadolint:slim {{.CLI_ARGS}}
 
-      This task will run Prettier on the project and list the possible fixes without automatically
-      applying the fixes. It will report mistakes like inconsistent indent lengths, trailing spaces,
-      and more. This task is a wrapper for the `npm run lint:prettier` command. It will use the configuration
-      specified in the `package.json` file under the `prettier` key.
-
-      If this command is incompatible with a file then you can add the file to the `.prettierignore`
-      file.
-
-      For more information, see [Prettier's website](https://prettier.io/).
-    cmds:
-      - prettier --list-different .
-      - prettier-package-json --list-different package.json
-    sources:
-      - "**/*.(css|html|js|json|less|md|mjml|php|scss|sh|ts|xml|yml)"
+  docker:default:
+    find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name Dockerfile -o
+    -name Dockerfile.j2 \) -print0 | xargs -0 -r -n1 docker run -v "$PWD:/work" -w /work
+    megabytelabs/hadolint:slim
 
   lint-staged:
     deps:
-      - :common:nodejs-dependencies
+      - :common:node:dependencies:local
       - :common:nodejs-global-dependencies
-      - :common:python-requirements
+      - :common:python:requirements
     cmds:
       - lint-staged
 
-  gitleaks:
-    deps:
-      - :software:gitleaks
-    desc: Scans repository (including git history) for possible leaked keys
-    summary: |
-      # Scan repository with Gitleaks
-
-      Find accidentally committed passwords, private keys, and API keys by scanning the repository with
-      Gitleaks.
-
-      **Example of scanning current repository:**
-      `task lint:gitleaks`
-
-      **Example of scanning a public git repository:**
-      `task lint:gitleaks -- https://github.com/ProfessorManhattan/Windows12`
-
-      For more information, see the [Gitleaks GitHub page](https://github.com/zricethezav/gitleaks).
-    cmds:
-      - |
-        if [ -z "\{{.CLI_ARGS}}" ]; then
-          gitleaks -p . -v
-        else
-          gitleaks --repo-url "\{{.CLI_ARGS}}" -v
-        fi
-
   markdown:
     deps:
-      - :nodejs:dependencies
-      - :npm:remark
+      - :common:node:dependencies:local
+      - :install:npm:remark
     desc: Lint markdown files
     summary: |
       # Lint markdown files
@@ -191,19 +117,17 @@ tasks:
 
       For more information on `remark-lint`, see the [GitHub page](https://github.com/remarkjs/remark-lint).
     cmds:
-      - |
-        if [ -z "\{{.CLI_ARGS}}" ]; then
-          find . -type d \( \{{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.md' \) -print0 |
-            xargs -0 -r -n1 remark
-        else
-          remark \{{.CLI_ARGS}}
-        fi
-    sources:
-      - "**/*.md"
+      - task: markdown:{{if .CLI_ARGS}}cli{{else}}default{{end}}
 
-  markdown-broken-links:
+  markdown:cli: remark {{.CLI_ARGS}}
+
+  markdown:default:
+    find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.md' \) -print0 |
+    xargs -0 -r -n1 remark
+
+  markdown:links:
     deps:
-      - :npm:markdown-link-check
+      - :install:npm:markdown-link-check
     desc: Scan markdown files for broken links
     summary: |
       # Report any broken links in the files that end with .md
@@ -219,20 +143,19 @@ tasks:
 
       For more information on `markdown-link-check`, see their [GitHub page](https://github.com/tcort/markdown-link-check).
     cmds:
-      - |
-        if [ -z "\{{.CLI_ARGS}}" ]; then
-          find . -type d \( \{{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.md' \) -print0 |
-            xargs -0 -r -n1 markdown-link-check
-        else
-          markdown-link-check \{{.CLI_ARGS}}
-        fi
+      - task: markdown:broken-links:{{if .CLI_ARGS}}cli{{else}}default{{end}}
     sources:
       - "**/*.md"
 
-{{#if hbs.packer}}
+  markdown:links:cli: markdown-link-check {{.CLI_ARGS}}
+
+  markdown:links:default:
+    find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.md' \) -print0 |
+    xargs -0 -r -n1 markdown-link-check
+
   packer:
     deps:
-      - :software:packer
+      - :install:software:packer
     desc: Validate the Packer templates ending with `template.json`
     summary: |
       # Validate Packer templates
@@ -249,47 +172,35 @@ tasks:
 
       For more information on `packer validate`, see the [Packer website](https://www.packer.io/docs/commands/validate).
     cmds:
-      - |
-        if [ -z "\{{.CLI_ARGS}}" ]; then
-          for TEMPLATE in *template.json; do
-            packer validate "$TEMPLATE"
-          done
-        else
-          packer validate \{{.CLI_ARGS}}
-        fi
-    sources:
-      - "*template.json"
+      - task: packer:{{if .CLI_ARGS}}cli{{else}}default{{end}}
 
-{{/if}}
-  private-keys:
+  packer:cli: packer validate {{.CLI_ARGS}}
+
+  packer:default: for TEMPLATE in *template.json; do packer validate "$TEMPLATE"; done
+
+  prettier:
     deps:
-      - :common:python-requirements
-    desc: Scan for private keys
+      - :install:npm:prettier
+    desc: Lint formatting using Prettier
     summary: |
-      # Scan for private keys
+      # Report formatting errors with Prettier
 
-      This task will scan the project for private keys that might not belong where they are. You
-      can pass this task a single file or let it loop through the project. If you loop through
-      the project, common folders like 'node_modules/' and 'venv/' will be ignored.
+      This task will run Prettier on the project and list the possible fixes without automatically
+      applying the fixes. It will report mistakes like inconsistent indent lengths, trailing spaces,
+      and more. This task is a wrapper for the `npm run lint:prettier` command. It will use the configuration
+      specified in the `package.json` file under the `prettier` key.
 
-      **Example scanning the whole project:**
-      `task lint:private-keys`
+      If this command is incompatible with a file then you can add the file to the `.prettierignore`
+      file.
 
-      **Example scanning single file:**
-      `task lint:private-keys -- filename.ext`
+      For more information, see [Prettier's website](https://prettier.io/).
     cmds:
-      - |
-        if [ -z "\{{.CLI_ARGS}}" ]; then
-          find . -type d \( \{{.IGNORE_FOLDERS}} \) -prune -o -type f -print0 | xargs -0 -r -n1 detect-private-key
-        else
-          detect-private-key \{{.CLI_ARGS}}
-        fi
-    sources:
-      - "**/*"
+      - prettier --list-different .
+      - prettier-package-json --list-different package.json
 
   prose:
     deps:
-      - :common:python-requirements
+      - :common:python:requirements
     desc: Lint for English prose
     summary: |
       # Lint for English prose
@@ -305,30 +216,42 @@ tasks:
 
       For more information, see [Proselint's GitHub page](https://github.com/amperser/proselint).
     cmds:
+      - task: prose:config
+      - task: prose:{{if .CLI_ARGS}}cli{{else}}default{{end}}
+      - task: prose:config:restore
+
+  prose:cli: proselint {{.CLI_ARGS}}
+
+  prose:config:
+    cmds:
       - |
         if [ -f ~/.config/proselint/config ]; then
-          true info "Backing up '~/.config/proselint/config' to '~/.config/proselint/config.installdoc.backup'"
-          mv ~/.config/proselint/config ~/.config/proselint/config.installdoc.backup
+          true info "Backing up `proselint` from `~/.config/proselint/config` to `~/.config/proselint/config.backup`"
+          mv ~/.config/proselint/config ~/.config/proselint/config.backup
         fi
       - mkdir -p ~/.config/proselint
       - cp .common/proselint.json ~/.config/proselint/config
-      - |
-        if [ -z "\{{.CLI_ARGS}}" ]; then
-          find . -type d \( \{{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.md' \) -print0 |
-            xargs -0 -r -n1 proselint
-        else
-          proselint \{{.CLI_ARGS}}
-        fi
-      - if [ -f ~/.config/proselint/config.installdoc.backup ]; then
-          true info "Restoring pre-existing Proselint configuration"
-          mv ~/.config/proselint/config.installdoc.backup ~/.config/proselint/config
-    sources:
-      - "**/*.md"
+    status:
+      - "! test -f ~/.config/proselint/config"
 
-{{#if hbs.python}}
+  prose:config:restore:
+    cmds:
+      - |
+        if [ -f ~/.config/proselint/config.backup ]; then
+          true info "Restoring original Proselint configuration"
+          mv ~/.config/proselint/config.backup ~/.config/proselint/config
+        fi
+    status:
+      - "! test -f ~/.config/proselint/config.backup"
+
+  prose:default:
+    find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.md' \) -print0 |
+    xargs -0 -r -n1 proselint
+
   python:
     deps:
-      - :common:python-requirements
+      - :common:python:requirements
+    label: lint:python
     desc: Lint Python files using Flake8
     summary: |
       # Lint Python files using Flake8
@@ -353,19 +276,14 @@ tasks:
 
       For more information, see [Flake8's GitHub page](https://github.com/PyCQA/flake8).
     cmds:
-      - |
-        if [ -z "\{{.CLI_ARGS}}" ]; then
-          flake8 .
-        else
-          flake8 \{{.CLI_ARGS}}
-        fi
-    sources:
-      - "**/*.py"
+      - task: lint:python:{{if .CLI_ARGS}}cli{{else}}default{{end}}
 
-{{/if}}
-  scripts:
+  python:cli: flake8 {{.CLI_ARGS}}
+
+  python:default: flake8 .
+  shellcheck:
     deps:
-      - :npm:shellcheck
+      - :install:npm:shellcheck
     desc: Report possible errors in shell scripts
     summary: |
       # Report possible errors in shell scripts using Shellcheck
@@ -386,21 +304,22 @@ tasks:
 
       For more information, see [Shellcheck's GitHub page](https://github.com/koalaman/shellcheck).
     cmds:
-      - |
-        if [ -z "\{{.CLI_ARGS}}" ]; then
-          find . -type d \( \{{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.sh' -o -name '*.sh.j2' \) -print0 |
-            xargs -0 -r -n1 shellcheck
-        else
-          shellcheck \{{.CLI_ARGS}}
-        fi
-    sources:
-      - "**/*.(sh|sh.j2)"
+      - task: shellcheck:{{if .CLI_ARGS}}cli{{else}}default{{end}}
+
+  shellcheck:cli:
+    cmds:
+      - shellcheck {{.CLI_ARGS}}
+    preconditions:
+      - sh: test -f {{.CLI_ARGS}}
+        msg: "{{.CLI_ARGS}} does not appear to be a file. Try passing a file path instead."
+
+  shellcheck:default:
+    find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.sh' -o -name '*.sh.j2' \) -print0 |
+    xargs -0 -r -n1 shellcheck
 
   spelling:
     deps:
-      - :npm:cspell
-      - :software:git
-      - :software:node
+      - :install:npm:cspell
     desc: Checks for spelling errors in staged files
     summary: |
       # Check for spelling errors in staged files
@@ -423,20 +342,26 @@ tasks:
       STAGED_FILES:
         sh: git diff --cached --name-only
     cmds:
-      - |
-        if [ -z "\{{.CLI_ARGS}}" ]; then
-          cspell --no-summary --no-progress --show-context --no-must-find-files --config .common/.cspell.json "$STAGED_FILES" || true
-        else
-          cspell --no-progress --show-context --no-must-find-files --config .cspell.json \{{.CLI_ARGS}} || true
-        fi
-    preconditions:
-      - sh: "git diff --cached --name-only"
-        msg: "Cannot perform a spell check because there are no staged files"
+      - task: spelling:{{if .CLI_ARGS}}cli{{else}}staged{{end}}
 
-{{#if hbs.vagrant}}
+  spelling:cli:
+    cmds:
+      - cmd: cspell --no-progress --show-context --no-must-find-files --config {{.CSPELL_CONFIG}} {{.CLI_ARGS}}
+        ignore_errors: true
+
+  spelling:staged:
+    env:
+      STAGED_FILES: git diff --cached --name-only
+    cmds:
+      - cmd: cspell --no-summary --no-progress --show-context --no-must-find-files --config {{.CSPELL_CONFIG}} "$STAGED_FILES"
+        ignore_errors: true
+    preconditions:
+      - sh: git diff --cached --name-only
+        msg: Cannot perform a spell check because there are no staged files
+
   vagrant:
     deps:
-      - :software:vagrant
+      - :install:software:vagrant
     desc: Validate the Vagrantfile
     summary: |
       # Validate the Vagrantfile
@@ -448,14 +373,10 @@ tasks:
       For more information on `vagrant validate`, see the [Vagrant website](https://www.vagrantup.com/docs/cli/validate).
     cmds:
       - vagrant validate
-    sources:
-      - Vagrantfile
 
-{{/if}}
-{{#if hbs.yaml}}
   yaml:
     deps:
-      - :common:python-requirements
+      - :common:python:requirements
     desc: Lint .yml files using YAML Lint
     summary: |
       # Lint YML files using YAML Lint
@@ -478,13 +399,7 @@ tasks:
 
       For more information, see the [YAML Lint GitHub page](https://github.com/adrienverge/yamllint).
     cmds:
-      - |
-        if [ -z "\{{.CLI_ARGS}}" ]; then
-          yamllint -s .
-        else
-          yamllint -s \{{.CLI_ARGS}}
-        fi
-    sources:
-      - "**/*.yml"
+      - task: yaml:{{if .CLI_ARGS}}cli{{else}}default{{end}}
 
-{{/if}}
+  yaml:cli: yamllint -s {{.CLI_ARGS}}
+  yaml:default: yamllint -s .
