--- a/taskfiles/Taskfile-vscode.yml
+++ b/taskfiles/Taskfile-vscode.yml
@@ -1,15 +1,17 @@
 ---
-version: '3'
+version: "3"
 
 tasks:
-  generate-tasks:
+  tasks:generate:
     deps:
-      - :software:jq
-    env:
+      - :install:software:jq
+    vars:
       TASK_LIST:
         sh: task --list
+    env:
       TMP_JSON:
         sh: mktemp
+    run: when_changed
     cmds:
       - |
         echo '{"version": "2.0.0"}' > "$TMP_JSON"
@@ -24,5 +26,5 @@ tasks:
             COMMAND="bash .common/scripts/init.sh && task $TASK_NAME"
             TASKS+="{\"label\": \"$LABEL\", \"type\": \"$TYPE\", \"command\": \"$COMMAND\"},"
           fi
-        done <<< "$TASK_LIST"
+        done <<< "{{.TASK_LIST}}"
         jq --arg tasks "${TASKS%?}]" '.tasks = ($tasks | fromjson)' "$TMP_JSON" > .vscode/tasks.json
