--- a/common/.config/taskfiles/upstream/Taskfile-shared.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-shared.yml
@@ -18,9 +18,9 @@ tasks:
       - task: :upstream:project:merge:package:files
 
   prepare:
-    deps:
-      - merge
-      - variables
+    cmds:
+      - task: merge
+      - task: variables
 
   template:
     deps:
