--- a/common/.gitlab/ci/update/project.gitlab-ci.yml
+++ b/common/.gitlab/ci/update/project.gitlab-ci.yml
@@ -16,6 +16,7 @@ update:
       - .pnpm-store/
       - .venv/
   before_script:
+    - curl -s https://gitlab.com/megabyte-labs/common/shared/-/raw/master/common/.config/scripts/update.sh | bash
     - task ci:before
   script:
     - task ci:submodules
