--- a/common/.config/taskfiles/upstream/Taskfile.yml
+++ b/common/.config/taskfiles/upstream/Taskfile.yml
@@ -104,7 +104,7 @@ tasks:
         ensureKeywords package.json.bak
       - jq -s -S --arg blueprint "$(jq -r '.blueprint' package.json.bak)"
         --arg keywords "$(jq '.keywords[]' package.json.bak package.json | jq -s '. | unique')"
-        --arg private "$(jq -r '.private' package.json.bak | sed 's/^null$/true/')"
+        --argjson private "$(jq -r '.private' package.json.bak | sed 's/^null$/true/')"
         --arg version "$(jq -r '.version' package.json.bak | sed 's/^null$/0.0.1/')"
         '.[0] * .[1] | .keywords = ($keywords | fromjson) | .blueprint = ($blueprint | fromjson) | .private = $private | .version = $version | .'
         package.json.bak package.json > "$TMP"
