--- a/.gitlab/ci/update/renovate.gitlab-ci.yml
+++ b/.gitlab/ci/update/renovate.gitlab-ci.yml
@@ -3,14 +3,14 @@ renovate:
   stage: update
   image:
     name: renovate/renovate:slim
-    entrypoint: [""]
+    entrypoint: ['']
   rules:
     - if: '$CI_PIPELINE_SOURCE == "schedule"'
     - when: never
   variables:
-    RENOVATE_GIT_AUTHOR: "${GITLAB_CI_NAME} <${GITLAB_CI_EMAIL}>"
     RENOVATE_DRY_RUN: 'false'
-    RENOVATE_LOG_LEVEL: 'info'
+    RENOVATE_GIT_AUTHOR: '${GITLAB_CI_NAME} <${GITLAB_CI_EMAIL}>'
+    RENOVATE_LOG_LEVEL: info
   script:
     - >
       renovate
