--- a/common/.config/taskfiles/vscode/Taskfile.yml
+++ b/common/.config/taskfiles/vscode/Taskfile.yml
@@ -19,8 +19,7 @@ tasks:
       - mkdir -p .vscode
       - curl -s {{.EXTENSIONS_URL}} > "$TMP"
       - >-
-        cat "$TMP" | yq e '.vscode_extensions[].name' - | jq -cRrs 'split("\n") | "{ \"recommendations\": \(.) }"' |
-        jq '.recommendations = ([ .recommendations[] | select(length > 0) ])' > '{{.EXTENSIONS_FILE}}'
+        cat "$TMP" | yq e '.vscode_extensions[].name' - | jq -cRrs 'split("\n") | "{ \"recommendations\": \(.) }"' | jq '.recommendations = ([ .recommendations[] | select(length > 0) ])' > '{{.EXTENSIONS_FILE}}'
 
   generate:
     cmds:
