--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -89,11 +89,9 @@ tasks:
     cmds:
       - |
         if [ -n "$GITLAB_CI" ]; then
-          if [ -n "$UPDATE_INIT_SCRIPT" ]; then
-            curl -s "$UPDATE_INIT_SCRIPT" | bash
-          fi
+          if [ -n "$UPDATE_INIT_SCRIPT" ]; then curl -s "$UPDATE_INIT_SCRIPT" | bash; fi
         else
-          curl -s '{{.INIT_SCRIPT}}' | bash
+          if [ -z "$SKIP_INIT" ]; then curl -s '\{{.INIT_SCRIPT}}' | bash; fi
         fi
       - task: boilerplate:check:package
       - task start
