--- a/common/.config/taskfiles/boilerplate/Taskfile.yml
+++ b/common/.config/taskfiles/boilerplate/Taskfile.yml
@@ -29,7 +29,7 @@ tasks:
           echo "GitLab repository blueprint data is not already present"
           ALREADY_PRESENT=$ALREADY_PRESENT:repository.gitlab
         fi
-        if [ ! -f 'package.json' ] || [ "$ALREADY_PRESENT" == 'false' ]; then
+        if [ ! -f 'package.json' ] || [ "$ALREADY_PRESENT" != 'true' ]; then
           node .config/scripts/prompts/package.js "$ALREADY_PRESENT"
           task boilerplate:update:taskfile
         fi
