--- a/common/.config/taskfiles/boilerplate/Taskfile.yml
+++ b/common/.config/taskfiles/boilerplate/Taskfile.yml
@@ -7,26 +7,23 @@ tasks:
     deps:
       - :install:software:jq
     vars:
-      BLUEPRINT_REQUIRED_FIELDS: description group name overview slug subgroup
+      BLUEPRINT_REQUIRED_FIELDS: title description group name overview slug subgroup
     cmds:
       - |
         ALREADY_PRESENT=true
         for ITEM in {{.BLUEPRINT_REQUIRED_FIELDS}}; do
           VALUE="$(jq --arg item "$ITEM" -r '.blueprint[$item]' package.json)"
           if [ "$VALUE" == 'null' ]; then
-            echo "$ITEM blueprint data not already present"
-            ALREADY_PRESENT=$ALREADY_PRESENT:$ITEM
+            ALREADY_PRESENT=false
+            break
           fi
         done
-        GITHUB="$(jq -r '.blueprint.repository.github' package.json)"
-        if [ "$GITHUB" == 'null' ]; then
-          echo "GitHub repository blueprint data is not already present"
-          ALREADY_PRESENT=$ALREADY_PRESENT:repository.github
-        fi
-        GITLAB="$(jq -r '.blueprint.repository.gitlab' package.json)"
-        if [ "$GITLAB" == 'null' ]; then
-          echo "GitLab repository blueprint data is not already present"
-          ALREADY_PRESENT=$ALREADY_PRESENT:repository.gitlab
+        if [ "$ALREADY_PRESENT" == 'true' ]; then
+          GITHUB="$(jq -r '.blueprint.repository.github' package.json)"
+          GITLAB="$(jq -r '.blueprint.repository.gitlab' package.json)"
+          if [ "$GITHUB" == 'null' ] || [ "$GITLAB" == 'null' ]; then
+            ALREADY_PRESENT=false
+          fi
         fi
         if [ ! -f 'package.json' ] || [ "$ALREADY_PRESENT" != 'true' ]; then
           node .config/scripts/prompts/package.js "$ALREADY_PRESENT"
