--- a/common/.config/taskfiles/boilerplate/Taskfile.yml
+++ b/common/.config/taskfiles/boilerplate/Taskfile.yml
@@ -43,5 +43,5 @@ tasks:
           yq e -i ".vars.REPOSITORY_TYPE = \"$GROUP\"" Taskfile.yml
         fi
         if [ "$SUBGROUP" != "$TASK_SUBGROUP" ]; then
-          yq e -i ".vars.REPOSITORY_SUBTYPE = \"$GROUP\"" Taskfile.yml
+          yq e -i ".vars.REPOSITORY_SUBTYPE = \"$SUBGROUP\"" Taskfile.yml
         fi
