--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -72,8 +72,7 @@ vars:
   INIT_SCRIPT: https://gitlab.com/megabyte-labs/common/shared/-/raw/master/common/.gitlab/ci/scripts/update-init.sh
   NPM_KEEP_UPDATED: '@installdoc/* @mblabs/* @washingtondc/ping cz-conventional-changelog'
   NPM_PROGRAM: npm
-  NPM_PROGRAM_LOCAL:
-    sh: 'if [ -n "$GITLAB_CI" ]; then echo "npm"; else echo "pnpm"; fi'
+  NPM_PROGRAM_LOCAL: pnpm
   NPX_HANDLE: ''
   NPX_PACKAGE: npx
   REPOSITORY_SUBTYPE: shared
