--- a/common/.config/taskfiles/common/Taskfile-update.yml
+++ b/common/.config/taskfiles/common/Taskfile-update.yml
@@ -19,7 +19,8 @@ tasks:
 
   all:docs:
     cmds:
-      - task: :{{if eq .REPOSITORY_TYPE "common"}}donothing{{else}}{{if eq .REPOSITORY_TYPE "documentation"}}donothing{{else}}common:update:all:docs:generate{{end}}{{end}}
+      - task: :{{if eq .REPOSITORY_TYPE "common"}}donothing{{else}}
+          {{if eq .REPOSITORY_TYPE "documentation"}}donothing{{else}}common:update:all:docs:generate{{end}}{{end}}
 
   all:docs:generate:
     deps:
