--- a/common/.config/taskfiles/git/Taskfile-gitlab.yml
+++ b/common/.config/taskfiles/git/Taskfile-gitlab.yml
@@ -127,6 +127,7 @@ tasks:
     log:
       error: Failed to run group:exec logic
       start: Running group:exec logic
+      success: Successfully ran group:exec logic
     cmds:
       - task git:gitlab:group:repositories -- {{index (splitList " ---- " .CLI_ARGS) 0}}
       - |
@@ -177,6 +178,10 @@ tasks:
 
       **Example specifying a group and subgroup:**
       `task {{.TASK}} -- megabyte-labs/ansible-roles`
+    log:
+      start: Generating list of repositories
+      success: List of repositories generated
+      error: Encountered error while generating a list of repositories
     cmds:
       - mkdir -p .cache
       - rm -f {{.REPOSITORY_LIST}}
@@ -200,16 +205,20 @@ tasks:
       - :install:software:glab
       - :install:software:jq
       - create
+    log:
+      start: Acquiring GitLab project and group IDs
+      success: Saved GitLab project and group IDs to package.json
+      error: Error acquiring GitLab project and group IDs
     cmds:
       - |
         API_RES="$(glab api projects/:fullpath)"
         PROJECT_ID="$(echo "$API_RES" | jq '.id')"
         TMP="$(mktemp)" && jq --arg projectId "$PROJECT_ID" '.blueprint.gitlab_project_id = $projectId' package.json > "$TMP"
         mv "$TMP" package.json
+      - |
         GROUP_ID="$(echo "$API_RES" | jq '.namespace.id')"
         TMP="$(mktemp)" && jq --arg groupId "$GROUP_ID" '.blueprint.gitlab_group_id = $groupId' package.json > "$TMP"
         mv "$TMP" package.json
-        .config/log success 'Added GitLab project ID to package.json'
 
   integrations:
     deps:
