--- a/common/.config/taskfiles/common/Taskfile-update.yml
+++ b/common/.config/taskfiles/common/Taskfile-update.yml
@@ -19,17 +19,7 @@ tasks:
 
   all:docs:
     cmds:
-      - task:
-          sh: |
-            {{if eq .REPOSITORY_TYPE "common"}}
-              echo ':donothing'
-            {{else}}
-              {{if eq .REPOSITORY_TYPE "documentation"}}
-                echo ':donothing'
-              {{else}}
-                echo 'all:docs:generate'
-              {{end}}
-            {{end}}
+      - task: '{{if eq .REPOSITORY_TYPE "common"}}:donothing{{else}}{{if eq .REPOSITORY_TYPE "documentation"}}:donothing{{else}}all:docs:generate{{end}}{{end}}'
 
   all:docs:generate:
     deps:
